--- a/assets/typographys.scss
+++ b/assets/typographys.scss
@@ -64,7 +64,8 @@ p {
 li {
   font-style: normal;
   text-decoration: none;
-  font-weight: 500;
+  color: $grey-medium;
+  font-weight: 300;
   font-size: 3.30vw;
   line-height: 40px;
   margin-top: 10px;
